[package]
name = "dropin"
version = "0.0.1"
edition = "2021"
description = "Minecraft Instances Manager"
license = "MIT"
documentation = "https://dropin.hydroroll.team/"
homepage = "https://dropin.hydroroll.team/"
repository = "https://github.com/HydroRoll-Team/DropIn"
authors = ["HsiangNianian"]

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["abi3-py39"] }
time = { version = "0.3.36", features = ["formatting", "macros", "local-offset"] }